# reid_annotation_tool

./: .gitignore  README.md  neighbor_finder.py  pyproject.toml
deploy/: deploy.py
reid_annotation_tool/: main.py  manage.py
reid_annotation_tool/package_0/: app.py
reid_annotation_tool/package_1/: dep.py
reid_annotation_tool/reid/: apps.py  db_population_scr.py  models.py  serializers.py  urls.py  views.py
reid_annotation_tool/reid/migrations/: 0001_initial.py
reid_annotation_tool/reid/templates/: index.html
reid_annotation_tool/reid_annotation_tool_project/: asgi.py  settings.py  urls.py  wsgi.py
reid_project/: manage.py
reid_project/reid_project/: asgi.py  settings.py  urls.py  wsgi.py
sqlalchemy_neighbor_finder/: Dockerfile.postgres  Dockerfile.python  config.py  database_init.py  database_utils.py  docker-compose.yml  init.sql  neighbor_finder.py  requirements.txt
